crates/djls-templates/src/snapshots/djls_templates__parser__tests__errors__parse_error_recovery.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodes:
  - Text:
      content: "<div class=\"container\">"
      span:
        start: 0
        length: 23
  - Text:
      content: "<h1>Header</h1>"
      span:
        start: 28
        length: 15
line_offsets:
  - 0
  - 24
  - 44
  - 54
  - 106
  - 145
  - 159
  - 219
  - 251
  - 287
  - 308
  - 341
