crates/djls-templates/src/snapshots/djls_templates__parser__tests__errors__parse_unclosed_django_for.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Tag
    name: for
    name_span:
      - 3
      - 3
    arguments:
      - text: item
        span:
          - 7
          - 4
      - text: in
        span:
          - 12
          - 2
      - text: items
        span:
          - 15
          - 5
    span:
      - 2
      - 19
    full_span:
      - 0
      - 23
  - type: Variable
    var: item.name
    filters: []
    span:
      - 25
      - 11
    full_span:
      - 23
      - 15
