crates/djls-templates/src/snapshots/djls_templates__parser__tests__errors__parse_unclosed_html_tag.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_ast
---
nodelist:
  - type: Text
    span:
      - 0
      - 5
