crates/djls-templates/src/snapshots/djls_templates__parser__tests__errors__parse_unclosed_script.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodes:
  - Text:
      content: "<script>console.log('test');"
      span:
        start: 0
        length: 28
line_offsets:
  - 0
