crates/djls-templates/src/snapshots/djls_templates__parser__tests__errors__parse_unclosed_style.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodes:
  - Text:
      content: "<style>body { color: blue;"
      span:
        start: 0
        length: 26
line_offsets:
  - 0
