crates/djls-templates/src/snapshots/djls_templates__parser__tests__errors__parse_unclosed_variable_token.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Error
    content: " user"
    span:
      - 2
      - 5
    full_span:
      - 0
      - 7
    error:
      MalformedConstruct:
        position: 0
        content: " user"
